--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,9 @@ body {
 .pill {
   @apply rounded-2xl bg-white/5 px-4 py-2 ring-1 ring-white/10 transition hover:bg-white/10;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
